--- a/index.html
+++ b/index.html
@@ -128,39 +128,31 @@
 
   <div id="flowers">
     <img id="flowerImage" src="download.jpg" alt="Blue Flower 1" />
-    <div id="message">This bouquet with loves is for you my bae.
-      Touch it Touch it!💋</div>
+    <div id="message">This bouquet is for you, Shoon Lei.
+      Touch it Touch it!</div>
     <div id="loveLetter">
       <p>
-       Dear Jue Jue San,<br><br>
+       Dear Shoon Lei,<br><br>
+        I’m not writing this to pressure you or to expect anything in return.<br><br>
 
-I’m not writing this to ask you to say yes, or to make you feel pressured.<br><br>
+I just want to share how I truly feel — honestly and openly.<br><br>
 
-I just want to let you know how I truly feel — without expecting anything in return.<br><br>
+I’ve thought a lot about what you said. I understand that you’re busy, and I respect your decision. Even so, my feelings haven’t changed. I still care about you, I still admire you, and I want the best for you — even if I’m not part of that picture right now.<br><br>
 
-I’ve thought a lot about what you said. I understand that you’re busy, and I respect your decision.<br>
-But even after hearing your answer, my feelings haven’t changed.<br>
-I still care about you. I still admire you. And I still want the best for you — even if I’m not part of that picture right now.<br><br>
+This isn’t about trying to win you back. It’s about being honest, because you deserve honesty.<br><br>
 
-This isn’t about trying to win you over.<br>
-This is about me being honest — because you deserve honesty.<br><br>
+I’m not perfect. I’ve made mistakes, and I’m still learning. But my feelings for you were real and sincere. Even when it hurts, I’m grateful for having felt this, because it reminds me how deeply I can care.<br><br>
 
-I’m not perfect. I’ve made mistakes, and I’m still learning.<br>
-But one thing is true: my feelings for you came from a sincere place.<br>
-Even when it hurts, I’m glad I felt this way, because it reminded me how deeply I can care.<br><br>
+You don’t have to respond. You don’t owe me anything. Just know that somewhere, someone is quietly wishing you peace, strength, and happiness — always.<br><br>
 
-You don’t have to respond to this.<br>
-You don’t owe me anything.<br>
-Just know that somewhere out there, someone is silently wishing you peace, strength, and happiness — always.<br><br>
-
-Take your time with life. Take care of yourself.<br>
-And no matter where we both end up…<br>
-I’ll be okay. And I’ll always wish the best for you.<br><br>
+Take your time with life. Take care of yourself. And no matter where we both end up, I’ll be okay, and I’ll always wish the best for you.<br><br>
 
 With quiet care,<br>
 Aung Oak Soe
 
-      </p>
+
+
+
     </div>
   </div>
 
@@ -198,3 +190,4 @@ Aung Oak Soe
   </script>
 </body>
 </html>
+
