--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 I just want to share how I truly feel — honestly and openly.<br><br>
 
-I’ve thought a lot about what you said. I understand that you’re busy, and I respect your decision. Even so, my feelings haven’t changed. I still care about you, I still admire you, and I want the best for you — even if I’m not part of that picture right now.<br><br>
+I’ve thought a lot about what you said. I understand what you feel, and I respect your decision. Even so, my feelings haven’t changed. I still care about you, I still admire you, and I want the best for you — even if I’m not part of that picture right now.<br><br>
 
 This isn’t about trying to win you back. It’s about being honest, because you deserve honesty.<br><br>
 
@@ -145,7 +145,7 @@ I’m not perfect. I’ve made mistakes, and I’m still learning. But my feelin
 
 You don’t have to respond. You don’t owe me anything. Just know that somewhere, someone is quietly wishing you peace, strength, and happiness — always.<br><br>
 
-Take your time with life. Take care of yourself. And no matter where we both end up, I’ll be okay, and I’ll always wish the best for you.<br><br>
+Take your time with life. Take care of yourself, and I’ll always wish the best for you.<br><br>
 
 With quiet care,<br>
 Aung Oak Soe
@@ -190,4 +190,5 @@ Aung Oak Soe
   </script>
 </body>
 </html>
+
 
